--- a/base/doc/Makefile
+++ b/base/doc/Makefile
@@ -1,6 +1,7 @@
 MAN1=		port.1
 MAN5=		macports.conf.5
 MAN7=		portfile.7 portstyle.7 porthier.7 portgroup.7
+CONF=       macports.conf pubkeys.conf sources.conf variants.conf
 INSTALLDIR=	${DESTDIR}${prefix}
 TOPSRCDIR=	..
 
@@ -16,7 +17,7 @@ clean:
 test:
 
 distclean: clean
-	rm -f prefix.mtree macports.conf macosx.mtree
+	rm -f macports.conf macosx.mtree prefix.mtree pubkeys.conf
 
 %.1.gz: %.1
 	gzip -c $^ > $@
@@ -40,21 +41,13 @@ install: all
 		$(LN_S) share/man ${INSTALLDIR}/man; \
 	fi
 
-	$(INSTALL) -o ${DSTUSR} -g ${DSTGRP} -m 444 macports.conf ${DESTDIR}${mpconfigdir}/macports.conf.default
-	if test ! -e ${DESTDIR}${mpconfigdir}/macports.conf ; then \
-		set -x; \
-		$(INSTALL) -o ${DSTUSR} -g ${DSTGRP} -m 644 macports.conf ${DESTDIR}${mpconfigdir}; \
-	fi
-	$(INSTALL) -o ${DSTUSR} -g ${DSTGRP} -m 444 sources.conf ${DESTDIR}${mpconfigdir}/sources.conf.default
-	if test ! -e ${DESTDIR}${mpconfigdir}/sources.conf ; then \
-		set -x; \
-		$(INSTALL) -o ${DSTUSR} -g ${DSTGRP} -m 644 sources.conf ${DESTDIR}${mpconfigdir}; \
-	fi
-	$(INSTALL) -o ${DSTUSR} -g ${DSTGRP} -m 444 variants.conf ${DESTDIR}${mpconfigdir}/variants.conf.default
-	if test ! -e ${DESTDIR}${mpconfigdir}/variants.conf ; then \
-		set -x; \
-		$(INSTALL) -o ${DSTUSR} -g ${DSTGRP} -m 644 variants.conf ${DESTDIR}${mpconfigdir}; \
-	fi
+	for f in ${CONF}; do \
+		$(INSTALL) -o ${DSTUSR} -g ${DSTGRP} -m 444 $$f ${DESTDIR}${mpconfigdir}/$${f}.default; \
+		if test ! -e ${DESTDIR}${mpconfigdir}/$$f ; then \
+			set -x; \
+			$(INSTALL) -o ${DSTUSR} -g ${DSTGRP} -m 644 $$f ${DESTDIR}${mpconfigdir}; \
+		fi; \
+	done
 
 	# delete old uncompressed man pages if they exist
 	for m in ${MAN1}; do rm -f ${INSTALLDIR}/share/man/man1/$$m ; done
