--- a/base/src/port1.0/port_autoconf.tcl.in
+++ b/base/src/port1.0/port_autoconf.tcl.in
@@ -44,6 +44,7 @@ namespace eval portutil::autoconf {
 	variable hg_path "@HG@"
 	variable gzip_path "@GZIP@"
 	variable lipo_path "@LIPO@"
+	variable openssl_path "@OPENSSL@"
 	variable patch_path "@PATCH@"
 	variable gnupatch_path "@GNUPATCH@"
 	variable rmdir_path "@RMDIR@"
