--- a/dports/python/py26-repoze.what/Portfile
+++ b/dports/python/py26-repoze.what/Portfile
@@ -8,7 +8,9 @@ version                 1.0.9
 maintainers             perry openmaintainer
 platforms               darwin
 
-description             Authorization framework for WSGI applications
+description             repoze.what is an authorization framework for WSGI \
+                        applications, based on repoze.who (which deals with \
+                        authentication and identification).
 long_description        ${description}
 license                 BSD
 homepage                http://pypi.python.org/pypi/repoze.what/
