--- a/dports/devel/autoconf/Portfile
+++ b/dports/devel/autoconf/Portfile
@@ -4,6 +4,7 @@ PortSystem       1.0
 
 name             autoconf
 version          2.66
+revision         1
 categories       devel
 maintainers      ram openmaintainer
 platforms        darwin
@@ -34,6 +35,9 @@ checksums        md5 d2d22a532ee0e4d6d86a02e6425ecfce \
 depends_lib      path:bin/perl:perl5 \
                  port:m4 \
                  port:help2man
+
+patchfiles       patch-lib_autoconf_status.m4.diff \
+                 patch-lib_autoconf_types.m4.diff
 
 # If libtool is eventually installed, it will provide glibtoolize (not libtoolize)
 post-patch {
