devel/autoconf: fix another regression using upstream patch
git-svn-id: https://svn.macports.org/repository/macports/trunk@69409 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/autoconf/Portfile
+++ b/dports/devel/autoconf/Portfile
@@ -4,7 +4,7 @@ PortSystem       1.0
 
 name             autoconf
 version          2.66
-revision         1
+revision         2
 categories       devel
 maintainers      ram openmaintainer
 platforms        darwin
@@ -37,7 +37,8 @@ depends_lib      path:bin/perl:perl5 \
                  port:help2man
 
 patchfiles       patch-lib_autoconf_status.m4.diff \
-                 patch-lib_autoconf_types.m4.diff
+                 patch-lib_autoconf_types.m4.diff \
+                 patch-lib_m4sugar_m4sh.m4.diff
 
 # If libtool is eventually installed, it will provide glibtoolize (not libtoolize)
 post-patch {
