encfs: update to v1.6.0 (#25427) * use three-part version number * new maintainer
git-svn-id: https://svn.macports.org/repository/macports/trunk@69410 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/fuse/encfs/Portfile
+++ b/dports/fuse/encfs/Portfile
@@ -1,13 +1,15 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 # $Id$
 
 PortSystem 1.0
 
 name                encfs
-version             1.5
-revision            1
+version             1.6.0
+set branch          [join [lrange [split ${version} .] 0 1] .]
+
 categories          fuse
 platforms           darwin
-maintainers         nomaintainer
+maintainers         gmail.com:Markus.Ueberall
 description         An encrypted pass-through FUSE filesystem
 
 long_description    EncFS is an encrypted pass-through filesystem which \
@@ -19,12 +21,13 @@ long_description    EncFS is an encrypted pass-through filesystem which \
 
 homepage            http://www.arg0.net/encfs
 
-distname            ${name}-${version}-2
+distname            ${name}-${branch}-1
 master_sites        googlecode
 extract.suffix      .tgz
-worksrcdir          ${name}-${version}
-checksums           md5 b07008545545b4a57cf2bf65f08a14ad \
-                    sha1 7fe225855645d98a33bf9f5fe64ac508fdb75257
+worksrcdir          ${name}-${branch}
+checksums           md5  db99570557cf432cca088748944fb74a \
+                    sha1 584128305764d794ea7644d033aa1247eff66b08 \
+                    rmd160 5503afc03e79f94db03c657c36df3a7118f34789
 
 depends_build       path:bin/pkg-config:pkgconfig
 depends_lib         port:rlog port:openssl port:macfuse port:gettext port:boost
