cws2fws: fixed some issues in cws2fws.c
git-svn-id: https://svn.macports.org/repository/macports/trunk@69414 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/multimedia/cws2fws/Portfile
+++ b/dports/multimedia/cws2fws/Portfile
@@ -4,6 +4,7 @@ PortSystem          1.0
 
 name                cws2fws
 version             0
+revision            1
 set ver_ffmpeg      0.6
 categories          multimedia
 maintainers         nomaintainer
@@ -15,6 +16,7 @@ master_sites        http://www.ffmpeg.org/releases/
 use_bzip2           yes
 distname            ffmpeg-${ver_ffmpeg}
 dist_subdir         ffmpeg
+patchfiles          patch-tools_cws2fws.c.diff
 
 depends_lib         port:zlib
 
