ncftp: add http mirror
git-svn-id: https://svn.macports.org/repository/macports/trunk@69415 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/ncftp/Portfile
+++ b/dports/net/ncftp/Portfile
@@ -19,7 +19,9 @@ long_description \
 
 homepage        http://www.ncftpd.com/ncftp/
 master_sites    ftp://ftp.ncftpd.com/${name}/ \
-                ftp://ftp.ncftpd.com/${name}/older_versions
+                ftp://ftp.ncftpd.com/${name}/older_versions \
+                http://www.mirrorservice.org/sites/ftp.ncftp.com/ncftp/ \
+                http://www.mirrorservice.org/sites/ftp.ncftp.com/ncftp/older_versions/
 dist_subdir     ${name}/${version}
 distname        ${name}-${distfile_version}-src
 worksrcdir      ${name}-${distfile_version}
