openssl: add configure.sdkroot support, remove check for build_arch existence (see #25114)
git-svn-id: https://svn.macports.org/repository/macports/trunk@69417 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/openssl/Portfile
+++ b/dports/devel/openssl/Portfile
@@ -53,6 +53,10 @@ livecheck.regex	${name}-(0.9.8\[a-z\])
 post-patch {
 	# Ensure that the correct compiler is used
 	reinplace "s|cc:|${configure.cc}:|" ${worksrcpath}/Configure
+	# use SDK if necessary
+	if {${configure.sdkroot} != ""} {
+		reinplace "s|\\(-arch \[_a-zA-Z0-9\]*\\)|\\1 -isysroot ${configure.sdkroot}|" ${worksrcpath}/Configure
+	}
 }
 
 array set merger_configure_args {
@@ -64,13 +68,6 @@ array set merger_configure_args {
 
 if { [variant_isset universal] } {
 	configure.cmd	./Configure
-
-	post-patch {
-        # For universal builds on ppc tiger, add sysroot
-        if {${os.arch} == "powerpc" && ${os.major} == "8"} {
-            reinplace "s|\\(-arch \[_a-zA-Z0-9\]*\\)|\\1 -isysroot ${developer_dir}/SDKs/MacOSX10.4u.sdk|" ${worksrcpath}/Configure
-        }
-	}
 
 	set merger_arch_compiler "no"
 
@@ -91,7 +88,7 @@ if { [variant_isset universal] } {
 		ppc64   ""
 		x86_64  ""
 	}
-} elseif {[info exists build_arch] && [info exists merger_configure_args($build_arch)]} {
+} elseif {[info exists merger_configure_args($build_arch)]} {
     configure.cmd           ./Configure
     configure.args-append   $merger_configure_args($build_arch)
 }
