--- a/dports/benchmarks/bonnie/Portfile
+++ b/dports/benchmarks/bonnie/Portfile
@@ -18,11 +18,7 @@ master_sites 	${homepage}
 distname   	${name}
 checksums	md5 f61cc061a418c3ae308ae362a1ae6490
 
-extract		{
-	system "mkdir ${workpath}/${name}"
-	system "cd ${workpath}/${name} && \
-	gzip -dc ${distpath}/${distfile} | tar -xf -"
-}
+extract.mkdir	yes
 
 configure	{}
 build.target	bsd
