--- a/dports/devel/eric4/Portfile
+++ b/dports/devel/eric4/Portfile
@@ -4,7 +4,7 @@
 PortSystem      1.0
 
 name            eric4
-version         4.4.3
+version         4.4.6
 categories      devel
 platforms       darwin
 maintainers     adfernandes openmaintainer
@@ -21,7 +21,9 @@ long_description \
 homepage        http://eric-ide.python-projects.org/index.html
 master_sites    sourceforge:project/eric-ide/${name}/stable/${version}/
 
-checksums       sha1 7506e9d0146a072d69bf754ca31d2e55bdd41267
+checksums       md5     803a00d171fce787c618fc5a6cddc2ce \
+                sha1    8b7483e2fb7be7026faf4376f1b13b118c87fdfb \
+                rmd160  26fd8bb41f47bf0f52b617d3a3674b572b7a8940
 
 depends_lib     port:python26 port:qt4-mac port:py26-pyqt4 port:py26-qscintilla \
                 port:py26-svn port:py26-rope port:py26-lint port:py26-cx_Freeze port:py26-enchant
