Make rubber depend on specific python ports instead of python_select
git-svn-id: https://svn.macports.org/repository/macports/trunk@69423 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/tex/rubber/Portfile
+++ b/dports/tex/rubber/Portfile
@@ -24,10 +24,29 @@ homepage        http://rubber.sourceforge.net/
 master_sites    http://ebeffara.free.fr/pub/
 checksums       md5 8087cdb498f51f91c2427c7d0b253189
 depends_run     bin:latex:texlive
-depends_lib     port:python_select
 
-configure.args  --python=${prefix}/bin/python \
-                --mandir=${destroot}${prefix}/share/man \
+configure.args  --mandir=${destroot}${prefix}/share/man \
                 --infodir=${destroot}${prefix}/share/info
 destroot.args   prefix=${destroot}${prefix}
 
+default_variants +python26
+
+variant python24 description {Use python2.4} {
+        depends_lib-append      port:python24
+        configure.args-append   --python=${prefix}/bin/python2.4
+}
+
+variant python25 description {Use python2.5} {
+        depends_lib-append      port:python25
+        configure.args-append   --python=${prefix}/bin/python2.5
+}
+
+variant python26 description {Use python2.6} {
+        depends_lib-append      port:python26
+        configure.args-append   --python=${prefix}/bin/python2.6
+}
+
+variant python27 description {Use python2.7} {
+        depends_lib-append      port:python27
+        configure.args-append   --python=${prefix}/bin/python2.7
+}
