--- a/dports/science/pymol/Portfile
+++ b/dports/science/pymol/Portfile
@@ -4,8 +4,7 @@
 PortSystem          1.0
 
 name                pymol
-version             1.2r2
-revision            2
+version             1.3
 categories          science
 maintainers         bromo.med.uc.edu:howarth
 description         Molecular graphics system
@@ -20,13 +19,13 @@ homepage            http://www.pymol.org/
 master_sites        sourceforge
 fetch.type          svn
 svn.url             https://pymol.svn.sourceforge.net/svnroot/pymol/trunk/pymol
-svn.revision        3866
+svn.revision        3911
 worksrcdir          pymol
 
 depends_lib         port:glut port:freetype port:libpng port:python26 port:py26-pmw port:py26-numeric port:mesa
 depends_run         port:xdpyinfo
 
-patchfiles          pymol-build.patch
+patchfiles          pymol-build.patch pymol-build.patch2
 use_configure       no
 
 post-patch {
@@ -40,7 +39,7 @@ post-patch {
 
 post-configure {
     copy ${worksrcpath}/setup/Rules.osx-fink ${worksrcpath}/Rules.delsci
-    if { [variant_isset gcc43] || [variant_isset gcc44] } {
+    if { [variant_isset gcc43] || [variant_isset gcc44] || [variant_isset gcc45] } {
         reinplace  "s| -no-cpp-precomp||g"          ${worksrcpath}/Rules.delsci
         reinplace  "s|^BUILD = |BUILD = -lstdc++ |" ${worksrcpath}/Rules.delsci
     }
@@ -52,7 +51,7 @@ pre-build {
                 CC="${configure.cc}" CXX="${configure.cxx}"
 }
 
-variant gcc43 description conflicts gcc44 description {build using macports-gcc-4.3} {
+variant gcc43 description conflicts gcc44 gcc45 description {build using macports-gcc-4.3} {
     depends_lib-append  port:gcc43
     # the current pymol makefile does not honour CC and CXX environment variables
     build.args-delete   CC="${configure.cc}" CXX="${configure.cxx}"
@@ -60,12 +59,20 @@ variant gcc43 description conflicts gcc44 description {build using macports-gcc-
     configure.compiler  macports-gcc-4.3
 }
 
-variant gcc44 description conflicts gcc43 description {build using macports-gcc-4.4} {
+variant gcc44 description conflicts gcc43 gcc45 description {build using macports-gcc-4.4} {
     depends_lib-append  port:gcc44
     # the current pymol makefile does not honour CC and CXX environment variables
     build.args-delete   CC="${configure.cc}" CXX="${configure.cxx}"
     build.args-append   CC="${prefix}/bin/gcc-mp-4.4" CXX="${prefix}/bin/g++-mp-4.4"
     configure.compiler  macports-gcc-4.4
+}
+
+variant gcc45 description conflicts gcc43 gcc44 description {build using macports-gcc-4.5} {
+    depends_lib-append  port:gcc45
+    # the current pymol makefile does not honour CC and CXX environment variables
+    build.args-delete   CC="${configure.cc}" CXX="${configure.cxx}"
+    build.args-append   CC="${prefix}/bin/gcc-mp-4.5" CXX="${prefix}/bin/g++-mp-4.5"
+    configure.compiler  macports-gcc-4.5
 }
 
 destroot {
