ntfs-3g: pkgconfig should be a build dependency only
git-svn-id: https://svn.macports.org/repository/macports/trunk@69429 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/fuse/ntfs-3g/Portfile
+++ b/dports/fuse/ntfs-3g/Portfile
@@ -25,7 +25,8 @@ checksums           md5 ad3c40bba398d162f97c2936293eae1f \
 livecheck.type      regex
 livecheck.regex     {<a href="ntfs-3g-(.+?)\.tgz">Stable}
 
-depends_lib         port:pkgconfig port:macfuse
+depends_build       port:pkgconfig
+depends_lib         port:macfuse
 
 configure.args      --exec-prefix=${prefix}
 
