--- a/dports/fuse/mhddfs/Portfile
+++ b/dports/fuse/mhddfs/Portfile
@@ -18,6 +18,7 @@ checksums       md5 6ea5e65a4595f71cbe534eb08028c0b8 \
                 sha1 98566e854453924b8e426120b85aa7088a0853ee \
                 rmd160 ff0502d220d4eb3aaa0c37ebf6989be66518d2b8
 
+depends_build port:pkgconfig
 depends_lib port:macfuse port:libiconv
 
 patchfiles patch-main.c.diff
