--- a/dports/fuse/spotlightfs/Portfile
+++ b/dports/fuse/spotlightfs/Portfile
@@ -34,7 +34,8 @@ use_bzip2           yes
 
 livecheck.distname  SpotlightFS-(.*).dmg
 
-depends_build       port:macfuse
+
+depends_lib         port:macfuse
 
 xcode.target            SpotlightFS
 xcode.configuration     Release
