--- a/dports/lang/erlang/Portfile
+++ b/dports/lang/erlang/Portfile
@@ -31,6 +31,8 @@ master_sites    http://www.erlang.org/download/ \
 # Parallel build doesn't work as per R13B01
 use_parallel_build  no
 
+universal_variant   no
+
 distfiles       otp_src_${version}${extract.suffix}                    \
                 otp_doc_man_${version}${extract.suffix}                \
                 otp_doc_html_${version}${extract.suffix}
