ejabberd: disable universal variant
git-svn-id: https://svn.macports.org/repository/macports/trunk@69435 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/ejabberd/Portfile
+++ b/dports/net/ejabberd/Portfile
@@ -25,6 +25,9 @@ depends_lib         port:erlang \
                     port:libiconv \
                     port:zlib
 
+# erlang is not universal
+universal_variant   no
+
 configure.args      --with-expat=${prefix} \
                     --with-zlib=${prefix} \
                     --with-openssl=${prefix}
