json_spirit: install json_spirit_error_position.h (#25540)
git-svn-id: https://svn.macports.org/repository/macports/trunk@69439 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/json_spirit/Portfile
+++ b/dports/devel/json_spirit/Portfile
@@ -6,6 +6,7 @@ PortGroup           cmake 1.0
 
 name                json_spirit
 version             4.03
+revision            1
 categories          devel
 platforms           darwin
 
@@ -25,6 +26,9 @@ homepage            http://www.codeproject.com/KB/recipes/JSON_Spirit.aspx
 master_sites        http://www.uwe-arzt.de/files/
 distname            ${name}_v${version}
 use_zip             yes
+patchfiles          CMakeLists.txt.patch
+# override patch.pre_args since it defaults to -p0
+patch.pre_args     -p1
 
 checksums           md5 6ab3a269488392e840f9dfffb67882f1 \
                     sha1 22f8a2a37e367ba07f6c1e56316a4ae35bb798b1
