python25: set configure.universal_archs to match reality (see #21248), use configure.sdkroot
git-svn-id: https://svn.macports.org/repository/macports/trunk@69440 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/python25/Portfile
+++ b/dports/lang/python25/Portfile
@@ -178,11 +178,13 @@ post-destroot {
 }
 }
 
+configure.universal_archs i386 ppc
+
 variant universal {
-   if {${macosx_version} == "10.4" && ${os.arch} == "powerpc"} {
-      configure.args-append   --enable-universalsdk=${developer_dir}/SDKs/MacOSX10.4u.sdk
-   } else {
+   if {${configure.sdkroot} == ""} {
       configure.args-append   --enable-universalsdk=/
+   } else {
+      configure.args-append   --enable-universalsdk=${configure.sdkroot}
    }
 }
 
