--- a/dports/lang/python31/Portfile
+++ b/dports/lang/python31/Portfile
@@ -33,11 +33,9 @@ patchfiles              patch-Makefile.pre.in.diff \
                         patch-Lib-distutils-dist.py.diff
 if {![variant_isset universal]} {
     patchfiles-append   patch-configure-arch_only.diff
-    if {[info exists configure.ld_archflags]} {
-        # -arch ends up getting passed to libtool which doesn't understand it, so we
-        # just clear it since this port doesn't respect build_arch anyway
-        configure.ld_archflags
-    }
+     # -arch ends up getting passed to libtool which doesn't understand it, so we
+     # just clear it since this port doesn't respect build_arch anyway
+     configure.ld_archflags
 }
 
 depends_lib             port:zlib port:openssl port:tk \
@@ -151,10 +149,8 @@ variant universal {
             ${worksrcpath}/configure
       }
    }
-   if {[info exists configure.sdkroot] && ${configure.sdkroot} != ""} {
+   if {${configure.sdkroot} != ""} {
       configure.args-append   --enable-universalsdk=${configure.sdkroot}
-   } elseif {${macosx_version} == "10.4" && ${os.arch} == "powerpc"} {
-      configure.args-append   --enable-universalsdk=${developer_dir}/SDKs/MacOSX10.4u.sdk
    } else {
       configure.args-append   --enable-universalsdk=/
    }
