devel/valgrind-devel: The darwin10 sepcific patches have been committed to trunk. Update to r11208, VEX r1986.
git-svn-id: https://svn.macports.org/repository/macports/trunk@69445 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/valgrind-devel/Portfile
+++ b/dports/devel/valgrind-devel/Portfile
@@ -3,7 +3,8 @@
 PortSystem 1.0
 
 name            valgrind-devel
-svn.revision    11104
+svn.revision    11208
+set vex_revision 1986
 version         3.6.0-r${svn.revision}
 categories      devel
 platforms       darwin
@@ -26,16 +27,7 @@ svn.args        --ignore-externals
 worksrcdir      trunk
 
 post-fetch {
-    system "cd ${worksrcpath} && ${svn.cmd} ${svn.pre_args} ${svn.method} svn://svn.valgrind.org/vex/trunk@1965 VEX"
-}
-
-patchfiles      patch-snow-leopard.diff \
-                patch-arc4random.diff \
-                patch-sidt.diff \
-                patch-signal.diff
-
-post-patch {
-    system "cd ${worksrcpath} && touch darwin10.supp darwin10-drd.supp"
+    system "cd ${worksrcpath} && ${svn.cmd} ${svn.pre_args} ${svn.method} svn://svn.valgrind.org/vex/trunk@${vex_revision} VEX"
 }
 
 use_autoreconf yes
@@ -44,9 +36,7 @@ configure.args  --mandir=${prefix}/share/man \
 
 # valgrind sets up -arch by itself, adding our own interferes with the build
 configure.cc_archflags {}
-if [exists configure.ld_archflags] {
-    configure.ld_archflags {}
-}
+configure.ld_archflags {}
 
 variant mpich2 description {Use mpich2 for MPI support} {
     depends_lib-append port:mpich2
