update version, switch to python26
git-svn-id: https://svn.macports.org/repository/macports/trunk@69447 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/mftrace/Portfile
+++ b/dports/graphics/mftrace/Portfile
@@ -1,9 +1,9 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; truncate-lines: t; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:et:sw=4:ts=4:sts=4
 # $Id$
 
 PortSystem			1.0
 name				mftrace
-version				1.2.14
-revision                        1
+version				1.2.16
 categories			graphics
 maintainers			nomaintainer
 description			Trace TeX bitmap font to PFA, PFB, or TTF font
@@ -17,13 +17,13 @@ platforms			darwin
 homepage			http://lilypond.org/mftrace/
 master_sites			http://lilypond.org/download/sources/mftrace/
 
-checksums			md5 4e8837594c9e451666b65bfae3165e4f
-				# md5sum unverified
+checksums           sha1    f227a98401ded8fbb0f692933ee6324ef80f3b61 \
+                    rmd160  71bb646fa78c81788fd1134659b3363e04ffed4c
 
-depends_lib			port:python25 port:potrace bin:kpsewhich:texlive
+depends_lib			port:python26 port:potrace bin:kpsewhich:texlive
 
 configure.args		--mandir=${prefix}/share/man
-configure.env		PYTHON=${prefix}/bin/python2.5
+configure.env		PYTHON=${prefix}/bin/python2.6
 
 variant autotrace {
 	depends_lib-delete	bin:potrace:potrace
