--- a/dports/sysutils/calcurse/Portfile
+++ b/dports/sysutils/calcurse/Portfile
@@ -2,31 +2,32 @@
 
 PortSystem 1.0
 
-name			calcurse
-version			1.9
-categories		sysutils
-platforms		darwin
-maintainers		nomaintainer
-description		text-based personal organizer
-long_description	Calcurse is a text-based personal organizer which helps \
-			keep track of events and everyday tasks.
+name            calcurse
+version         1.9
+categories      sysutils
+platforms       darwin
+maintainers     nomaintainer
+description     text-based personal organizer
+long_description \
+    Calcurse is a text-based personal organizer which helps \
+    keep track of events and everyday tasks.
 
-homepage		http://culot.org/calcurse/
-master_sites	ftp://ftp2.culot.org/culot/ \
-				freebsd
-checksums		md5 e6d7bad03b2a28ed06f8ef65e9dcd227 \
+homepage        http://culot.org/calcurse/
+master_sites    ftp://ftp2.culot.org/culot/ \
+                freebsd
+checksums       md5 e6d7bad03b2a28ed06f8ef65e9dcd227 \
                 sha1 8dfab928f05bd030d5038b0c6271d3f9bf7ea8f8 \
                 rmd160 94734e85a009d3cdd58b9bc4064d35d7c15bf95f
 
-depends_lib		port:gettext port:libiconv port:ncurses 
+depends_lib     port:gettext port:libiconv port:ncurses
 
-configure.args	--mandir=${prefix}/share/man
-configure.cflags-append	"-I${prefix}/include"
-configure.ldflags-append	"-lintl"
+configure.args  --mandir=${prefix}/share/man
+configure.cflags-append "-I${prefix}/include"
+configure.ldflags-append "-lintl"
 
 post-destroot {
-	xinstall -m 755 -d ${destroot}${prefix}/share/doc/${name}
-	xinstall -m 644 -W ${worksrcpath} AUTHORS COPYING ChangeLog INSTALL NEWS \
-		README TODO ${destroot}${prefix}/share/doc/${name}
+    xinstall -m 755 -d ${destroot}${prefix}/share/doc/${name}
+    xinstall -m 644 -W ${worksrcpath} AUTHORS COPYING ChangeLog INSTALL NEWS \
+        README TODO ${destroot}${prefix}/share/doc/${name}
 }
 
