sysutils/calcurse: Update to version 2.8
git-svn-id: https://svn.macports.org/repository/macports/trunk@69449 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/sysutils/calcurse/Portfile
+++ b/dports/sysutils/calcurse/Portfile
@@ -3,7 +3,7 @@
 PortSystem 1.0
 
 name            calcurse
-version         1.9
+version         2.8
 categories      sysutils
 platforms       darwin
 maintainers     nomaintainer
@@ -15,19 +15,20 @@ long_description \
 homepage        http://culot.org/calcurse/
 master_sites    ftp://ftp2.culot.org/culot/ \
                 freebsd
-checksums       md5 e6d7bad03b2a28ed06f8ef65e9dcd227 \
-                sha1 8dfab928f05bd030d5038b0c6271d3f9bf7ea8f8 \
-                rmd160 94734e85a009d3cdd58b9bc4064d35d7c15bf95f
+
+checksums       md5     124d40c0912b12021996220f02b759cc \
+                sha1    749a95a7076163ef9324dce47e541e1c9c53093b \
+                rmd160  1c4f04d776d1ce5452c14cfc020ea8b5d0f8818c
 
 depends_lib     port:gettext port:libiconv port:ncurses
 
 configure.args  --mandir=${prefix}/share/man
-configure.cflags-append "-I${prefix}/include"
+configure.cflags-append "-I${prefix}/include -fnested-functions"
 configure.ldflags-append "-lintl"
 
 post-destroot {
     xinstall -m 755 -d ${destroot}${prefix}/share/doc/${name}
-    xinstall -m 644 -W ${worksrcpath} AUTHORS COPYING ChangeLog INSTALL NEWS \
+    xinstall -m 644 -W ${worksrcpath} AUTHORS ChangeLog INSTALL NEWS \
         README TODO ${destroot}${prefix}/share/doc/${name}
 }
 
