add conflicts in variants
git-svn-id: https://svn.macports.org/repository/macports/trunk@69450 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/tex/rubber/Portfile
+++ b/dports/tex/rubber/Portfile
@@ -29,24 +29,26 @@ configure.args  --mandir=${destroot}${prefix}/share/man \
                 --infodir=${destroot}${prefix}/share/info
 destroot.args   prefix=${destroot}${prefix}
 
-default_variants +python26
-
-variant python24 description {Use python2.4} {
+variant python24 conflicts python25 python26 python27 description {Use python 2.4} {
         depends_lib-append      port:python24
         configure.args-append   --python=${prefix}/bin/python2.4
 }
 
-variant python25 description {Use python2.5} {
+variant python25 conflicts python24 python26 python27 description {Use python 2.5} {
         depends_lib-append      port:python25
         configure.args-append   --python=${prefix}/bin/python2.5
 }
 
-variant python26 description {Use python2.6} {
+variant python26 conflicts python24 python25 python27 description {Use python 2.6} {
         depends_lib-append      port:python26
         configure.args-append   --python=${prefix}/bin/python2.6
 }
 
-variant python27 description {Use python2.7} {
+variant python27 conflicts python24 python25 python26 description {Use python 2.7} {
         depends_lib-append      port:python27
         configure.args-append   --python=${prefix}/bin/python2.7
+}
+
+if {![variant_isset python24] && ![variant_isset python25] && ![variant_isset python26] && ![variant_isset python27]} {
+        default_variants +python26
 }
