devel/valgrind-devel: Indicate that this port cannot be build with +universal
git-svn-id: https://svn.macports.org/repository/macports/trunk@69452 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/valgrind-devel/Portfile
+++ b/dports/devel/valgrind-devel/Portfile
@@ -37,6 +37,7 @@ configure.args  --mandir=${prefix}/share/man \
 # valgrind sets up -arch by itself, adding our own interferes with the build
 configure.cc_archflags {}
 configure.ld_archflags {}
+universal_variant no
 
 variant mpich2 description {Use mpich2 for MPI support} {
     depends_lib-append port:mpich2
