--- a/dports/sysutils/diffutils/Portfile
+++ b/dports/sysutils/diffutils/Portfile
@@ -5,6 +5,7 @@ PortSystem          1.0
 name                diffutils
 version             3.0
 categories          sysutils textproc devel
+license             GPL-3+
 maintainers         nomaintainer
 description         GNU diff utilities
 long_description \
