iso-codes: update to 3.18
git-svn-id: https://svn.macports.org/repository/macports/trunk@69456 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/iso-codes/Portfile
+++ b/dports/devel/iso-codes/Portfile
@@ -4,10 +4,11 @@
 PortSystem          1.0
 
 name                iso-codes
-version             3.17
+version             3.18
 categories          devel
 platforms           darwin
-license             LGPLv2.1
+supported_archs     noarch
+license             LGPL-2.1+
 maintainers         nomaintainer
 
 description         ISO country, language and currency codes and translations
@@ -20,9 +21,9 @@ master_sites        debian:i/iso-codes/
 use_bzip2           yes
 distfiles           ${name}_${version}.orig${extract.suffix}
 
-checksums           md5     063b6698aed520f5a97745602032709e \
-                    sha1    4d22fc287251dcc2d2dfd148fab235cd3b9f0143 \
-                    rmd160  7c6361f093faabb9473dd46955413e6e1b93b3de
+checksums           md5     96d22a03e307a8e0ca1e43280392cdc4 \
+                    sha1    b1c5892abe0a2d3df318203e510a1f84d27db2cb \
+                    rmd160  1979f53628bcf1bb3c521b4d729b8bb5fb9e92ed
 
 depends_build       port:gettext
 
@@ -37,12 +38,6 @@ post-destroot {
     xinstall -d ${destroot}${prefix}/share/doc/${name}
     xinstall -m 644 -W ${worksrcpath} ChangeLog LICENSE README TODO \
         ${destroot}${prefix}/share/doc/${name}
-}
-
-if {[info exists supported_archs]} {
-    supported_archs noarch
-} else {
-    universal_variant no
 }
 
 livecheck.type      regex
