--- a/dports/math/atlas/Portfile
+++ b/dports/math/atlas/Portfile
@@ -6,10 +6,10 @@ PortGroup           muniversal 1.0
 categories          math
 name                atlas
 version             3.8.3
-revision            2
+revision            3
 
 # additional versions
-set lapackversion   3.2.1
+set lapackversion   3.2.2
 set lapackname      lapack
 set atlasdist       ${name}${version}.tar.bz2
 set lapackdist      ${lapackname}.tgz
@@ -24,7 +24,7 @@ long_description    The current version provides a complete BLAS and LAPACK API.
 
 homepage            http://math-atlas.sourceforge.net/
 
-master_sites        sourceforge:math-atlas/${name}${version}.tar.bz2:atlas \
+master_sites        sourceforge:math-atlas:atlas \
                     http://www.netlib.org/lapack:lapack
 
 distfiles           ${atlasdist}:atlas \
@@ -34,14 +34,16 @@ patchfiles          patch-ATL_AVgcc-fix.diff \
                     patch-archinfo_freebsd.c.diff \
                     patch-SpewMakeInc.c.diff
 
-checksums           atlas${version}.tar.bz2 \
+dist_subdir         ${name}/${version}_${revision}
+
+checksums           atlas3.8.3.tar.bz2 \
                     md5     6c13be94a87178e7582111c08e9503bc \
                     sha1    c7546210df4796457d9e96a00444adc4c0f2e77f \
                     rmd160  0425e630d9d0c5b7aae81427a41b7eaa18447e90 \
                     lapack.tgz \
-                    md5     a3202a4f9e2f15ffd05d15dab4ac7857 \
-                    sha1    c75223fdef3258c461370af5d2b889d580d7f38a \
-                    rmd160  e8fabba2fdd944afbc02a83599cf45a0d721030d
+                    md5     37369f490a4c26d6e6551470ce5ad7d1 \
+                    sha1    335cfd6a07988149556db2544118c5b0ed972062 \
+                    rmd160  a4bd4ef86ea6977558a4c5595d8628c00f3c5247
 
 
 use_parallel_build  no
@@ -97,8 +99,8 @@ configure.args      -C xc ${configure.cc} \
                     -C sk ${configure.cc} \
                     --cc=${configure.cc} \
                     -b ${my_arch} \
-                    -Fa alg -fPIC 
-                    
+                    -Fa alg -fPIC
+
 if { [variant_isset universal] } {
     configure.universal_args-delete --disable-dependency-tracking
     configure.args-delete -b ${my_arch}
@@ -114,7 +116,7 @@ if { [variant_isset universal] } {
 }
 
 build.env-append    "CC=${configure.cc} CXX=${configure.cxx}"
-        
+
 
 # we are configuring from the build directory
 configure.dir       ${workpath}/${name}-${version}/build
@@ -147,11 +149,11 @@ pre-configure {
 
     reinplace "s|cc=gcc|cc=${configure.cc}|g" ${worksrcpath}/configure
     reinplace "s|-no-cpp-precomp||g" ${workpath}/${name}-${version}/CONFIG/src/atlcomp.txt
-    
+
     # Get some system specific variables for maximum optimization
     set cpufreq [expr {[exec sysctl -n hw.cpufrequency]/1000000}]
     ui_debug "Setting CPU Frequency for: ${cpufreq}"
-    
+
     if {[string equal "${os.arch}" "powerpc"]} {
       configure.args-append -D c -DWALL
     } else {
@@ -165,7 +167,7 @@ pre-configure {
     }
 
     foreach arch ${archs} {
- 
+
     # first do a 'fake configure' of atlas so we get optimized lapack libraries
     ui_debug "performing fake configure of atlas for optimized lapack"
     # atlas docs: 3.1.2
@@ -200,7 +202,7 @@ pre-configure {
            ${lapack_path}/make.inc
     reinplace "s|OPTS     = -O2|OPTS = ${atlas_fflags}|" \
            ${lapack_path}/make.inc
-      
+
     if { ! [variant_isset universal] } {
         reinplace "s|NOOPT    = -O0|NOOPT = -O2 -m${my_arch}|" \
                ${lapack_path}/make.inc
@@ -239,7 +241,7 @@ post-configure {
     } else {
         set archs ${build_arch}
     }
- 
+
     foreach arch ${archs} {
         if { ! [variant_isset universal] } {
             set atlas_path  ${workpath}/${name}-${version}
@@ -273,7 +275,7 @@ post-build {
     } else {
         set archs ${build_arch}
     }
- 
+
     foreach arch ${archs} {
         if { ! [variant_isset universal] } {
             set atlas_path  ${workpath}/${name}-${version}
@@ -303,7 +305,7 @@ pre-destroot {
     } else {
         set archs ${build_arch}
     }
- 
+
     foreach arch ${archs} {
         if { ! [variant_isset universal] } {
             set atlas_path  ${workpath}/${name}-${version}
