--- a/dports/graphics/inkscape-devel/Portfile
+++ b/dports/graphics/inkscape-devel/Portfile
@@ -7,6 +7,7 @@ name            inkscape-devel
 conflicts       inkscape
 set svn_rev     22457
 version         0.46.${svn_rev}
+revision        1
 epoch           1
 maintainers     devans
 categories      graphics gnome
