--- a/dports/graphics/ipe-tools/Portfile
+++ b/dports/graphics/ipe-tools/Portfile
@@ -4,6 +4,7 @@ PortSystem 1.0
 
 name                    ipe-tools
 version                 20091019
+revision        1
 categories              graphics
 maintainers             jacobs-university.de:m.thon
 description             Tools for the Ipe extensible drawing editor
