--- a/dports/graphics/pdf2djvu/Portfile
+++ b/dports/graphics/pdf2djvu/Portfile
@@ -3,6 +3,7 @@
 PortSystem          1.0
 name                pdf2djvu
 version             0.5.11
+revision        1
 categories          graphics textproc
 maintainers         nomaintainer
 description         Convert PDF to DjVu
