texlive-htmlxml: add missing dependency on texlive-latex-recommended
git-svn-id: https://svn.macports.org/repository/macports/trunk@69459 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/tex/texlive-htmlxml/Portfile
+++ b/dports/tex/texlive-htmlxml/Portfile
@@ -6,7 +6,7 @@ PortGroup           texlive 1.0
 
 name                texlive-htmlxml
 version             13822
-revision            1
+revision            2
 
 categories          tex
 maintainers         dports
@@ -17,7 +17,7 @@ checksums           md5     1fa7abc8975c94e6584217296241ae40 \
                     sha1    03201da211a657ad553b4e9b34d2e2b9b053aa17 \
                     rmd160  46fa303c39e7078ca7bf0e8eebcc729b9e391799
 
-depends_lib         port:texlive-basic port:texlive-fonts-recommended port:texlive-latex
+depends_lib         port:texlive-basic port:texlive-fonts-recommended port:texlive-latex port:texlive-latex-recommended
 
 texlive.formats      \
     {1 jadetex pdftex language.dat {*jadetex.ini}} \
