add patch (from Apple OpenSource) that avoids a NULL pointer deref.
git-svn-id: https://svn.macports.org/repository/macports/trunk@69460 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/sysutils/file/Portfile
+++ b/dports/sysutils/file/Portfile
@@ -5,6 +5,7 @@ PortSystem 1.0
 
 name                file
 version             5.04
+revision            1
 categories          sysutils
 maintainers         jay.fm:jay-macports \
                     openmaintainer
@@ -27,7 +28,8 @@ checksums           md5     accade81ff1cc774904b47c72c8aeea0 \
                     sha1    56ddf7135471aa656334ed8fefe1112bcccc2cc3 \
                     rmd160  2ee0dc535a4fb6f06950f81882772cc34f981984
 
-patchfiles          patch-magic-Magdir-msdos.diff
+patchfiles          patch-magic-Magdir-msdos.diff \
+                    patch-src-readcdf.c.diff
 
 configure.args      --mandir=${prefix}/share/man \
                     --enable-fsect-man5
