emulators/qemu: Disable default universal variant
git-svn-id: https://svn.macports.org/repository/macports/trunk@69461 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/emulators/qemu/Portfile
+++ b/dports/emulators/qemu/Portfile
@@ -38,3 +38,6 @@ pre-configure {
 foreach t {arm cris m68k mips mipsel mips64 mips64el ppcemb sh4 sh4eb sparc} {
     variant target_${t} description "add ${t} target support" "append target_list \",${t}-softmmu\""
 }
+
+# Default universal variant does not work
+universal_variant       no
