emulators/qemu: Add missing dependencies
git-svn-id: https://svn.macports.org/repository/macports/trunk@69462 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/emulators/qemu/Portfile
+++ b/dports/emulators/qemu/Portfile
@@ -4,6 +4,7 @@ PortSystem 1.0
 
 name                    qemu
 version                 0.12.3
+revision                1
 categories              emulators
 platforms               darwin
 maintainers             nomaintainer
@@ -23,6 +24,15 @@ checksums               md5     d215e4568650e8019816397174c090e1 \
 
 patchfiles              patch-configure.diff \
                         patch-cocoa.m
+
+depends_lib             port:curl \
+                        port:cyrus-sasl2 \
+                        port:gnutls \
+                        port:libidn \
+                        port:libtasn1 \
+                        port:ncurses \
+                        port:openssl \
+                        port:zlib
 
 configure.args          --cc=${configure.cc} \
                         --host-cc=${configure.cc}
