emulators/qemu: Add livecheck
git-svn-id: https://svn.macports.org/repository/macports/trunk@69463 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/emulators/qemu/Portfile
+++ b/dports/emulators/qemu/Portfile
@@ -51,3 +51,7 @@ foreach t {arm cris m68k mips mipsel mips64 mips64el ppcemb sh4 sh4eb sparc} {
 
 # Default universal variant does not work
 universal_variant       no
+
+livecheck.type regex
+livecheck.url http://download.savannah.gnu.org/releases/${name}/
+livecheck.regex ${name}-(\\d+(?:\\.\\d+)*)\\.tar
