grads: fixed link errors by enabling dynamic linking
git-svn-id: https://svn.macports.org/repository/macports/trunk@69465 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/science/grads/Portfile
+++ b/dports/science/grads/Portfile
@@ -5,7 +5,7 @@ PortSystem 1.0
 
 name                grads
 version             1.9b4
-revision            7
+revision            8
 platforms           darwin
 maintainers         takeshi
 categories          science
@@ -36,20 +36,23 @@ patchfiles          patch-configure.diff patch-grads.h.diff    \
 
 post-patch {
     reinplace "s|/usr/local|${prefix}|" ${worksrcpath}/src/gx.h
+    reinplace "s| www | |" ${worksrcpath}/configure
+    foreach f {gaio gasdf gauser stnmap} {
+        reinplace "s|%li|%d|g" ${worksrcpath}/src/${f}.c
+    }
 }
 
-configure.env       SUPPLIBS=${prefix} LIBS=-lsz
+configure.env       SUPPLIBS=${prefix} LIBS="-lsz"
 configure.args      --with-readline --with-lats \
                     --with-nc --with-dods --with-hdf --with-x      \
-                    --with-printim --without-gui
+                    --with-printim --without-gui \
+                    --enable-dyn-supplibs
 configure.cppflags-delete   -I${prefix}/include
 configure.cppflags-append   -I${prefix}/lib/jpeg6b/include -I${prefix}/include
 configure.ldflags-delete    -L${prefix}/lib 
 configure.ldflags-append    -L${prefix}/lib/jpeg6b/lib -L${prefix}/lib 
 
 post-configure {
-    reinplace "s|libjpeg.a|jpeg6b/lib/libjpeg.a|" ${worksrcpath}/src/Makefile
-    reinplace "s|libwww.a|libwwwcore.a|g" ${worksrcpath}/src/Makefile
     reinplace "s|\$(supp_lib_dir)/inst.o| |g" ${worksrcpath}/src/Makefile
 }
 
