--- a/dports/print/latex2html/Portfile
+++ b/dports/print/latex2html/Portfile
@@ -4,7 +4,7 @@ PortSystem 1.0
 
 name		latex2html
 version		2008
-revision	1
+revision	2
 categories	print
 platforms	darwin
 maintainers	nomaintainer
@@ -20,7 +20,7 @@ checksums	md5     275ab6cfa8ca9328446b7f40d8dc302e		\
 		sha1    5e0aa47572e0c13a4c5da51e963d5496be3f86e7	\
 		rmd160  a95f06253d6fc8808ffedcad7edf8235194d7756
 
-depends_run	bin:latex:texlive	\
+depends_run	bin:latex:texlive-latex	\
 		port:ghostscript	\
 		port:netpbm
 
@@ -29,12 +29,13 @@ depends_lib	path:bin/perl:perl5
 configure.perl  ${prefix}/bin/perl
 
 configure.args	--without-mktexlsr	\
-		--with-texpath=${prefix}/share/texmf-local/tex/latex/html
+		--with-texpath=${prefix}/share/texmf/tex/latex/html
 
 post-destroot	{ reinplace "s|gray85|rgb:d9/d9/d9|g" ${destroot}${prefix}/bin/pstoimg
 }
 
-post-activate	{ system "texhash" }
+post-activate	{ system "mktexlsr" }
+post-deactivate	{ system "mktexlsr" }
 
 livecheck.type  regex
 livecheck.url "http://saftsack.fs.uni-bayreuth.de/~latex2ht/current/?C=M;O=D"
