--- a/dports/perl/p5-glib/Portfile
+++ b/dports/perl/p5-glib/Portfile
@@ -3,7 +3,7 @@
 PortSystem			1.0
 PortGroup			perl5 1.0
 
-perl5.setup			Glib 1.222
+perl5.setup			Glib 1.223
 maintainers			nomaintainer
 description			Access to GLib and GObject
 long_description \
@@ -12,13 +12,14 @@ long_description \
 	type system with inheritance and a powerful signal system.
 
 platforms			darwin
+license			LGPL-2.1+
 
 homepage			http://gtk2-perl.sourceforge.net/
 master_sites		sourceforge:gtk2-perl
 
-checksums               md5     2f1af85d768920625f8d4a3ff9b75cc4 \
-                        sha1    526bbd4058a0cbbef22b5a87d07f8f3dbd7fae0d \
-                        rmd160  22e9336f7c96abe9d4a60d0ad809d9603191570b
+checksums               md5     cfdeaa8c95448f86c30b505e4701abf1 \
+                        sha1    db8268dc52b4c10038db24604886c54cae142ac7 \
+                        rmd160  62b06b7a45f1be9ebd03efeedb2462e16b4248b6
 
 depends_lib		path:lib/pkgconfig/glib-2.0.pc:glib2 \
 			port:p5-extutils-depends \
