p5-gtk2: update to 1.222, add license
git-svn-id: https://svn.macports.org/repository/macports/trunk@69469 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/perl/p5-gtk2/Portfile
+++ b/dports/perl/p5-gtk2/Portfile
@@ -3,7 +3,7 @@
 PortSystem			1.0
 PortGroup			perl5 1.0
 
-perl5.setup			Gtk2 1.221
+perl5.setup			Gtk2 1.222
 maintainers			nomaintainer
 description			Bindings to Gtk+ library
 long_description \
@@ -14,13 +14,14 @@ long_description \
 	API.
 
 platforms			darwin
+license			LGPL-2.1+
 
 homepage			http://gtk2-perl.sourceforge.net/
 master_sites		sourceforge:gtk2-perl
 
-checksums               md5     ba412049d10978ed802b98976f6adaa9 \
-                        sha1    5c3d2eda84c50e619ea4cb6474cf92c437ea11e8 \
-                        rmd160  167267b086d7acf0d0b543a1af66fbc701a6643a
+checksums               md5     8f8a170b33dc2cf4e69769e97c05185a \
+                        sha1    1d8aa9684bd454fc98b1fc29d961583617b3d566 \
+                        rmd160  f135139d2ef12878539f4fb147cf1bad5e6970db
 
 depends_lib		port:gtk2 \
 				port:p5-extutils-depends \
