--- a/dports/graphics/wxWidgets-python/Portfile
+++ b/dports/graphics/wxWidgets-python/Portfile
@@ -5,8 +5,9 @@ PortSystem      1.0
 PortGroup       archcheck 1.0
 
 name            wxWidgets-python
-conflicts       wxgtk
+conflicts       wxgtk wxWidgets
 version         2.8.10.1
+revision        1
 categories      graphics devel
 platforms       darwin
 maintainers     nomaintainer
@@ -85,6 +86,11 @@ variant carbon conflicts gtk description {use carbon} {
     configure.args-append --with-mac
     if {$build_arch == "x86_64"} {
         configure.build_arch i386
+        configure.cflags-append -arch i386
+        configure.ldflags-append -arch i386
+        configure.cxxflags-append -arch i386
+        configure.cppflags-append -arch i386
+        configure.objcflags-append -arch i386
     } elseif {$build_arch == "ppc64"} {
         configure.build_arch ppc
     }
@@ -94,6 +100,7 @@ variant carbon conflicts gtk description {use carbon} {
 }
 variant gtk conflicts carbon description {use gtk} {
     depends_lib-append    port:gtk2
+    depends_lib-append    port:mesa
     depends_lib-delete    path:lib/pkgconfig/sdl.pc:libsdl
     depends_lib-delete    port:libsdl_mixer
     archcheck.files-delete lib/libSDL.dylib \
